implement filtering (overlap save w analytic) + xy + square aspect ratio

--- a/config.toml
+++ b/config.toml
@@ -1,14 +1,14 @@
 [audio]
 buffer_size = 256
 num_buffers = 16
-fft_size = 2048
+fft_size = 1024
 
 [uniforms]
 decay = 0.5
-thickness = 2.0
+thickness = 3.0
 thinning = 0.0
 base_hue = 0.3333
-colorize = true
+colorize = false
 
 [debug]
 # when buffers are dropped, print "!"
