implement angular velocity/torsion color + noise visuals

--- a/config.toml
+++ b/config.toml
@@ -2,13 +2,16 @@
 buffer_size = 256
 num_buffers = 16
 fft_size = 1024
+cutoff = 0.1
+q = 0.5
 
 [uniforms]
 decay = 0.3
 thickness = 3.0
 thinning = 0.0
 base_hue = 0.3333
-colorize = false
+desaturation = 0.7
+colorize = true
 
 [debug]
 # when buffers are dropped, print "!"
