--- a/browser/package.json
+++ b/browser/package.json
@@ -2,8 +2,23 @@
   "name": "audioscope-js",
   "version": "0.0.0",
   "description": "audio visualizers true to the sound, for the browser",
-  "main": "index.js",
+  "main": "src/index.js",
+  "scripts": {
+    "start": "webpack-dev-server",
+    "build": "webpack -p"
+  },
   "repository": "https://github.com/conundrumer/audioscope",
   "author": "david lu",
-  "license": "GPL"
+  "license": "GPL",
+  "devDependencies": {
+    "babel-core": "^6.22.1",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.22.0",
+    "webpack": "2.2.0",
+    "webpack-dev-server": "2.2.0",
+    "webpack-glsl-loader": "^1.0.1"
+  },
+  "dependencies": {
+    "twgl-base.js": "^2.8.2"
+  }
 }
